# rosettax87

./: .gitmodules  CMakeLists.txt  README.md
ida/: chain_fixup.py  label.py
loader/: macho_loader.cpp  macho_loader.hpp  main.cpp  offset_finder.cpp  offset_finder.hpp
rosettaRuntime/: Export.cpp  Export.h  Log.cpp  Log.h  Neon.cpp  Neon.h  SIMDGuard.cpp  SIMDGuard.h  X87.cpp  X87.h  X87Float80.cpp  X87Float80.h  X87Logger.cpp  X87Register.cpp  X87Register.h  X87Simple.cpp  X87State.cpp  X87State.h  main.cpp  mmath.cpp  mmath.h
sample/: cpuid.c  math.c
